fixed buttons visibility and look

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -7,13 +7,24 @@ body {
 }
 
 .btn {
-  width: auto;
-  font-size: 35px;
-  margin: 1%;
-  padding: 1%;
-  background-color: rgb(167, 188, 255);
+  background-color: #c526ab; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 30px;
+  margin: 4px 2px;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
   border: 1px;
   border-style: solid;
+}
+
+.btn:hover {
+  color: black;
 }
 
 a {
@@ -32,9 +43,11 @@ a {
   background-color: pink;
 }
 
-#genie-render {
-  width: 40%;
+#genie-dashboard-render {
+  width: 30%;
   height: auto;
+  border: 2px;
+  border-style: solid;
 }
 
 // Numbers played history area
